# common-3.0-sdk

./: CMakeLists.txt
.github/workflows/: build-sdk.yml
cmake/: sdk_headers.cmake  system_stubs.cmake
sources/cmake-toolchain/Platform/: common-3.0.cmake
sources/cmake-toolchain/Toolchain/: common-3.0.cmake
sources/libc-stub/: CMakeLists.txt  CoreLocation.m  OpenGLES.m
sources/libc-stub/src/: AudioToolbox.m  SystemConfiguration.m  libSystem.B.dylib.m
sources/sdk-headers/: README.md  extract_ios_headers.py  header_sources.yaml  pyproject.toml  requirements.txt
sources/sdk-headers/patches/: cdefs.patch  cfbase.patch  ctype.patch  malloc.patch  pthread.patch  targetconditionals.patch  vm_params.patch
sources/system-stubs/: CMakeLists.txt  generate_stub.py  missing_touchHLE_symbols.txt  touchHLE_symbols.txt
sources/system-stubs/src/: AVFoundation.m  CoreFoundation.m  CoreGraphics.m  Foundation.m  GameKit.m  MediaPlayer.m  OpenAL.m  QuartzCore.m  StoreKit.m  UIKit.m  libSystem.B.dylib.m  libobjc.A.dylib.m
